refactor: Clamping refactored using custom utility functions
- Clamp sanity values to a defined range using new CUMath library for clamping.
- Refactor math operations to use custom utility clamp function.
- Refactor CUMath class to include float and double versions of the 'clamp' method for range restriction.